<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="common_android_wear_notification_needs_update_text"><g id="app_name">%1$s</g> requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text"><g id="app_name">%1$s</g>" won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text"><g id="app_name">%1$s</g> requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text"><g id="app_name">%1$s</g>" won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by <g id="app_name">%1$s</g></string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone"><g id="app_name">%1$s</g>" won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet"><g id="app_name">%1$s</g>" won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="address_bar_hint">Type Your Full Address Here</string>
    <string name="address_option_delivery">Delivery</string>
    <string name="address_option_pickup">Pickup</string>
    <string name="address_option_show_all">Show All</string>
    <string name="create_account_and">" and "</string>
    <string name="create_account_legal">Legal</string>
    <string name="create_account_password">Create Password*</string>
    <string name="create_account_privacy">Privacy</string>
    <string name="default_api_key">ghandroid_Ujtwar5s9e3RYiSNV31X41y2hsK6Kh1Uv7JDrkpS</string>
    <string name="default_jiujitsu_endpoint">https://api-gtm.grubhub.com</string>
    <string name="default_old_api_endpoint">https://services.grubhub.com/services</string>
    <string name="desc_address_bar">Address Bar</string>
    <string name="desc_address_clear_button">Clear Address Button</string>
    <string name="desc_address_option_delivery_button">Delivery Button</string>
    <string name="desc_address_option_pickup_button">Pickup Button</string>
    <string name="desc_address_option_show_all_button">Show All Button</string>
    <string name="desc_address_search_icon">Address Search Icon</string>
    <string name="desc_login_create_an_account_button">Create an Account Button</string>
    <string name="desc_login_email_address_field">Email Address Field</string>
    <string name="desc_login_forgot_your_password">Forgot Your Password Button</string>
    <string name="desc_login_log_in_button">Log In Button</string>
    <string name="desc_login_password_field">Password Field</string>
    <string name="desc_login_show_password">Show Password</string>
    <string name="desc_out_of_range_dialog">Out of Range Dialog</string>
    <string name="desc_out_of_range_search">Search for Nearby Restaurants</string>
    <string name="desc_out_of_range_start_over">Start Over</string>
    <string name="desc_out_of_range_switch">Switch to Pickup</string>
    <string name="desc_tip_cash">Cash Tip Button</string>
    <string name="desc_tip_custom">Custom Tip Button</string>
    <string name="desc_tip_fifteen_percent">Fifteen Percent Tip Button</string>
    <string name="desc_tip_ten_percent">Ten Percent Tip Button</string>
    <string name="desc_tip_twenty_percent">Twenty Percent Tip Button</string>
    <string name="desc_yummy_rummy_cta">Yummy Rummy Header Image</string>
    <string name="desc_yummy_rummy_play_now_btn">Yummy Rummy Play Now</string>
    <string name="login_email_hint">android@grubhub.com</string>
    <string name="login_email_required_label">Email*</string>
    <string name="login_forgot_your_password">Forgot Your Password?</string>
    <string name="login_password_hint">8 or more characters.</string>
    <string name="login_password_required_label">Password*</string>
    <string name="login_show_password_switch_hide">Hide</string>
    <string name="login_show_password_switch_show">Show</string>
    <string name="login_sign_in">Log In</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="out_of_range_dismiss">Start Over</string>
    <string name="out_of_range_message">"Don't feel bad, long distance relationships are hard.
How would you like to move on?"</string>
    <string name="out_of_range_search">Search for Nearby Restaurants</string>
    <string name="out_of_range_switch">Switch to Pickup</string>
    <string name="out_of_range_title">"Oh No! It looks like %s doesn't deliver to this address."</string>
    <string name="pref_num_dialog_title_cart_search_lifetime">Enter the Cart/Search lifetime length in minutes</string>
    <string name="pref_num_dialog_title_session_timeout">Enter the User Session timeout length in minutes</string>
    <string name="pref_num_summary_cart_search_lifetime_minutes">The length of time in minutes in which cart and search data is valid after the end of the current user session.</string>
    <string name="pref_num_summary_session_timeout_minutes">The length of time in minutes in which a user session is valid after last use.</string>
    <string name="pref_num_title_cart_search_lifetime_minutes">Cart and Search Data Lifetime</string>
    <string name="pref_num_title_session_timeout_minutes">User Session Timeout</string>
    <string name="pref_switch_label_feature_off">OFF</string>
    <string name="pref_switch_label_feature_on">ON</string>
    <string name="pref_switch_label_off">GH API</string>
    <string name="pref_switch_label_on">NEW</string>
    <string name="pref_switch_label_ssl_off">NO</string>
    <string name="pref_switch_label_ssl_on">YES</string>
    <string name="pref_switch_summary_future_orders_off">Future Orders Disabled</string>
    <string name="pref_switch_summary_future_orders_on">Future Orders Enabled</string>
    <string name="pref_switch_summary_nearby_off">Nearby Disabled</string>
    <string name="pref_switch_summary_nearby_on">Nearby Enabled</string>
    <string name="pref_switch_summary_off">GrubHub API Only</string>
    <string name="pref_switch_summary_on">New Content API</string>
    <string name="pref_switch_summary_ssl_off">NO SSL</string>
    <string name="pref_switch_summary_ssl_on">YES SSL</string>
    <string name="pref_switch_summary_urban_airship_off">Urban Airship Disabled</string>
    <string name="pref_switch_summary_urban_airship_on">Urban Airship Enabled</string>
    <string name="pref_switch_title_choose_ssl">Choose SSL</string>
    <string name="pref_switch_title_choose_which_api">Choose API</string>
    <string name="pref_switch_title_feature_future_orders">Future Orders</string>
    <string name="pref_switch_title_feature_nearby">Nearby</string>
    <string name="pref_switch_title_feature_urban_airship">Urban Airship</string>
    <string name="pref_title_choose_api_key">Choose API Key</string>
    <string name="pref_title_choose_new_api">Choose New Content API Server</string>
    <string name="pref_title_choose_old_api">Choose GrubHub API Server</string>
    <string name="tip_cash_tip">"Cash
Tip"</string>
    <string name="tip_custom_amount">"Custom
$"</string>
    <string name="tip_fifteen_percent">15%</string>
    <string name="tip_ten_percent">10%</string>
    <string name="tip_twenty_percent">20%</string>
    <string name="yummy_rummy_header">Yummy Rummy</string>
    <string name="yummy_rummy_official_rules_link"><u>Official Rules</u>.</string>
    <string name="yummy_rummy_official_rules_text">By entering you are agreeing to the</string>
    <string name="yummy_rummy_play_now">Play Now!</string>
    <string name="yummy_rummy_text">The Triumphant Return Of</string>
</resources>