<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="API Server Settings" />
    <SwitchPreference android:gravity="end" android:padding="0.0dip" android:drawablePadding="0.0dip" android:title="@string/pref_switch_title_choose_which_api" android:key="api_selection_switch" android:defaultValue="true" android:summaryOn="@string/pref_switch_summary_on" android:summaryOff="@string/pref_switch_summary_off" android:switchTextOn="@string/pref_switch_label_on" android:switchTextOff="@string/pref_switch_label_off" />
    <ListPreference android:entries="@array/pref_old_api_list_titles" android:title="@string/pref_title_choose_old_api" android:key="pref_old_api_selected" android:defaultValue="@string/default_old_api_endpoint" android:positiveButtonText="@null" android:negativeButtonText="@null" android:entryValues="@array/pref_old_api_list_values" />
    <ListPreference android:entries="@array/pref_api_key_list_titles" android:title="@string/pref_title_choose_api_key" android:key="pref_api_key_selected" android:defaultValue="@string/default_api_key" android:positiveButtonText="@null" android:negativeButtonText="@null" android:entryValues="@array/pref_api_key_list_values" />
    <ListPreference android:entries="@array/pref_new_api_list_titles" android:title="@string/pref_title_choose_new_api" android:key="pref_new_api_selected" android:dependency="api_selection_switch" android:defaultValue="@string/default_jiujitsu_endpoint" android:positiveButtonText="@null" android:negativeButtonText="@null" android:entryValues="@array/pref_new_api_list_values" />
    <SwitchPreference android:gravity="end" android:padding="0.0dip" android:drawablePadding="0.0dip" android:title="@string/pref_switch_title_choose_ssl" android:key="use_ssl_switch" android:defaultValue="false" android:summaryOn="@string/pref_switch_summary_ssl_on" android:summaryOff="@string/pref_switch_summary_ssl_off" android:switchTextOn="@string/pref_switch_label_ssl_on" android:switchTextOff="@string/pref_switch_label_ssl_off" />
    <PreferenceCategory android:title="Feature Toggle Overrides" />
    <SwitchPreference android:gravity="end" android:padding="0.0dip" android:drawablePadding="0.0dip" android:title="@string/pref_switch_title_feature_nearby" android:key="feature_nearby" android:defaultValue="false" android:summaryOn="@string/pref_switch_summary_nearby_on" android:summaryOff="@string/pref_switch_summary_nearby_off" android:switchTextOn="@string/pref_switch_label_feature_on" android:switchTextOff="@string/pref_switch_label_feature_off" />
    <SwitchPreference android:gravity="end" android:padding="0.0dip" android:drawablePadding="0.0dip" android:title="@string/pref_switch_title_feature_future_orders" android:key="feature_future_orders" android:defaultValue="false" android:summaryOn="@string/pref_switch_summary_future_orders_on" android:summaryOff="@string/pref_switch_summary_future_orders_off" android:switchTextOn="@string/pref_switch_label_feature_on" android:switchTextOff="@string/pref_switch_label_feature_off" />
    <SwitchPreference android:gravity="end" android:padding="0.0dip" android:drawablePadding="0.0dip" android:title="@string/pref_switch_title_feature_urban_airship" android:key="feature_urban_airship" android:defaultValue="false" android:summaryOn="@string/pref_switch_summary_urban_airship_on" android:summaryOff="@string/pref_switch_summary_urban_airship_off" android:switchTextOn="@string/pref_switch_label_feature_on" android:switchTextOff="@string/pref_switch_label_feature_off" />
    <PreferenceCategory android:title="Session Management Settings" />
    <EditTextPreference android:numeric="integer" android:title="@string/pref_num_title_session_timeout_minutes" android:key="session_timeout_minutes" android:summary="@string/pref_num_summary_session_timeout_minutes" android:defaultValue="@integer/session_time_minutes" android:dialogTitle="@string/pref_num_dialog_title_session_timeout" />
    <EditTextPreference android:numeric="integer" android:title="@string/pref_num_title_cart_search_lifetime_minutes" android:key="cart_search_data_lifetime_minutes" android:summary="@string/pref_num_summary_cart_search_lifetime_minutes" android:defaultValue="@integer/cart_search_data_lifetime_minutes" android:dialogTitle="@string/pref_num_dialog_title_cart_search_lifetime" />
</PreferenceScreen>