<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/ghs_background_no_color" android:paddingTop="@dimen/out_of_range_padding" android:paddingBottom="@dimen/out_of_range_padding" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/desc_out_of_range_dialog"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.grubhub.AppBaseLibrary.android.views.GHSTextView android:textColor="@color/ghs_primary_text_color" android:id="@id/range_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/out_of_range_padding" android:text="@string/out_of_range_title" style="@style/OutOfRangeText" />
    <com.grubhub.AppBaseLibrary.android.views.GHSTextView android:textColor="@color/ghs_secondary_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/out_of_range_message" style="@style/OutOfRangeText" />
    <ProgressBar android:layout_gravity="center_horizontal" android:id="@id/range_progress_bar" android:visibility="invisible" android:indeterminate="true" style="@style/OutOfRangeProgressBar" />
    <com.grubhub.AppBaseLibrary.android.views.GHSButton android:textColor="@color/text_rounded_button_selector_inverted" android:gravity="center" android:id="@id/range_switch_to_pickup_button" android:background="@drawable/bg_rounded_button_selector_inverted" android:layout_width="fill_parent" android:text="@string/out_of_range_switch" android:contentDescription="@string/desc_out_of_range_switch" style="@style/OutOfRangeSwitchToPickupButton" />
    <com.grubhub.AppBaseLibrary.android.views.GHSButton android:textColor="@color/text_rounded_button_selector_inverted" android:gravity="center" android:id="@id/range_search" android:background="@drawable/bg_rounded_button_selector_inverted" android:layout_width="fill_parent" android:text="@string/out_of_range_search" android:contentDescription="@string/desc_out_of_range_search" style="@style/YourInfoSaveButton" />
    <com.grubhub.AppBaseLibrary.android.views.GHSButton android:textColor="@color/text_rounded_button_selector_inverted" android:gravity="center" android:id="@id/range_dismiss" android:background="@drawable/bg_rounded_button_selector_inverted" android:layout_width="fill_parent" android:text="@string/out_of_range_dismiss" android:contentDescription="@string/desc_out_of_range_start_over" style="@style/YourInfoSaveButton" />
</LinearLayout>