<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:id="@id/login_container" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/LoginCreateAccountRoot">
            <com.grubhub.AppBaseLibrary.android.views.GHSTextView android:textColor="@color/text_label_utility_selector" android:id="@id/login_email_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_email_required_label" style="@style/LoginLabel" />
            <com.grubhub.AppBaseLibrary.android.views.GHSEditText android:textColor="@color/ghs_primary_text_color" android:id="@id/login_email_edit_text" android:background="@drawable/bg_edit_text_utility" android:layout_width="fill_parent" android:hint="@string/login_email_hint" android:layout_below="@id/login_email_label" android:inputType="textEmailAddress" android:contentDescription="@string/desc_login_email_address_field" style="@style/LoginEditText" />
            <com.grubhub.AppBaseLibrary.android.views.GHSTextView android:textColor="@color/text_label_utility_selector" android:id="@id/login_password_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_password_required_label" android:layout_below="@id/login_email_edit_text" style="@style/LoginLabel" />
            <com.grubhub.AppBaseLibrary.android.views.GHSEditText android:textColor="@color/ghs_primary_text_color" android:id="@id/login_password_edit_text" android:background="@drawable/bg_edit_text_utility" android:layout_width="fill_parent" android:hint="@string/login_password_hint" android:layout_below="@id/login_password_label" android:inputType="textPassword" android:imeOptions="actionGo" android:contentDescription="@string/desc_login_password_field" style="@style/LoginPasswordEditText" />
            <com.grubhub.AppBaseLibrary.android.views.GHSToggleButton android:textColor="@color/ghs_secondary_text_color" android:gravity="center|right" android:id="@id/login_show_password" android:background="@null" android:layout_width="wrap_content" android:layout_height="@dimen/login_field_height" android:textOn="@string/login_show_password_switch_hide" android:textOff="@string/login_show_password_switch_show" android:layout_alignRight="@id/login_password_edit_text" android:layout_alignBottom="@id/login_password_edit_text" android:contentDescription="@string/desc_login_show_password" style="@style/GHSFontDefault" />
            <com.grubhub.AppBaseLibrary.android.views.GHSButton android:enabled="false" android:textColor="@color/text_rounded_button_utility_selector" android:id="@id/login_sign_in_button" android:background="@drawable/bg_rounded_button_utility_selector" android:layout_width="fill_parent" android:text="@string/login_sign_in" android:layout_below="@id/login_show_password" android:contentDescription="@string/desc_login_log_in_button" style="@style/LoginButton" />
            <com.grubhub.AppBaseLibrary.android.views.GHSButton android:textColor="@color/text_login_sub_option_selector" android:id="@id/login_forgot_your_password" android:background="?android:selectableItemBackground" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_forgot_your_password" android:layout_below="@id/login_sign_in_button" android:layout_centerHorizontal="true" android:contentDescription="@string/desc_login_forgot_your_password" style="@style/LoginForgotPassword" />
        </RelativeLayout>
    </ScrollView>
    <com.grubhub.AppBaseLibrary.android.views.GHSTextView android:textColor="@color/ghs_light_text_color" android:id="@id/login_alert_label" android:background="@drawable/bg_login_message_selector" android:visibility="gone" android:layout="@id/login_forgot_your_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" style="@style/LoginAlert" />
</RelativeLayout>