<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/CartTipButtonContainer"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.grubhub.AppBaseLibrary.android.views.GHSButton android:textColor="@color/text_tip_button_selector" android:gravity="center" android:id="@id/tip_button_cash" android:background="@drawable/bg_rounded_button_toggle_left_selector" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/tip_cash_tip" android:maxLines="2" android:layout_weight="1.0" android:contentDescription="@string/desc_tip_cash" style="@style/CartTipButton" />
    <View style="@style/CartTipButtonSeparator" />
    <com.grubhub.AppBaseLibrary.android.views.GHSButton android:textColor="@color/text_tip_button_selector" android:ellipsize="end" android:gravity="center" android:id="@id/tip_button_first_segment" android:background="@drawable/bg_rounded_button_toggle_center_selector" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/tip_ten_percent" android:maxLines="2" android:layout_weight="1.0" android:contentDescription="@string/desc_tip_ten_percent" style="@style/CartTipButton" />
    <View style="@style/CartTipButtonSeparator" />
    <com.grubhub.AppBaseLibrary.android.views.GHSButton android:textColor="@color/text_tip_button_selector" android:ellipsize="end" android:gravity="center" android:id="@id/tip_button_second_segment" android:background="@drawable/bg_rounded_button_toggle_center_selector" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/tip_fifteen_percent" android:maxLines="2" android:layout_weight="1.0" android:contentDescription="@string/desc_tip_fifteen_percent" style="@style/CartTipButton" />
    <View style="@style/CartTipButtonSeparator" />
    <com.grubhub.AppBaseLibrary.android.views.GHSButton android:textColor="@color/text_tip_button_selector" android:ellipsize="end" android:gravity="center" android:id="@id/tip_button_third_segment" android:background="@drawable/bg_rounded_button_toggle_right_selector" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/tip_twenty_percent" android:maxLines="2" android:layout_weight="1.0" android:contentDescription="@string/desc_tip_twenty_percent" style="@style/CartTipButton" />
    <com.grubhub.AppBaseLibrary.android.views.GHSButton android:textColor="@color/text_tip_button_selector" android:ellipsize="end" android:gravity="center" android:id="@id/tip_button_custom" android:background="@drawable/bg_rounded_button_toggle_selector" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/tip_custom_amount" android:maxLines="2" android:layout_weight="1.0" android:contentDescription="@string/desc_tip_custom" style="@style/CartTipButtonCustom" />
</LinearLayout>